--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@ body {
   color: blueviolet;
   font-size: 20px;
 }
+
+.circle {
+  width: 200px;
+  height: 200px;
+  border: 1px solid;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
